# heidegger

./: .gitattributes  CONVENTIONS.md  GLOSSARY.md  NOTES.md  README.md  STYLE.md  chunker.py  claude_critiques_paragraph_77.json  cleaned_text.md  comparison_paragraph_77.md  driver.py  final_analysis_paragraph_77.md  gemini_critiques_paragraph_77.json  generate_analysis_pdf.sh  gpt_critiques_paragraph_77.json  grok_critiques_paragraph_77.json  meta_analysis.py  passages_75-80.json  preprocess.py  prompt_builder.py  pyproject.toml  sein_und_zeit_djvu.txt  term_analysis.json  term_extractor.py  test_preprocess.py  translation_parser.py  translator.py
.git-crypt/keys/default/0/: 6C7816ECABE6500B1A4A1B380EFC2ADA85B9BA9C.gpg
