[tool.poetry]
name = "heidegger-translation"
version = "0.1.0"
description = "Multi-modal LLM translation of Heidegger's Being and Time"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "*"
anthropic = "*"
google-generativeai = "*"
pandas = "*"
nltk = "*"
spacy = "*"
pdfplumber = "*"
markdown = "*"
pyyaml = "*"
langchain = "^0.3.27"
langchain-openai = "^0.3.28"
langchain-anthropic = "^0.3.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
