[tool.poetry]
name = "heidegger-translation"
version = "0.1.0"
description = "Multi-modal LLM translation of Heidegger's Being and Time"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "*"
anthropic = "*"
google-generativeai = "*"
langchain-google-genai = "*"
pandas = "*"
nltk = "*"
spacy = "*"
pdfplumber = "*"
markdown = "*"
pyyaml = "*"
langchain = "*"
langchain-openai = "*"
langchain-anthropic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
